# prx

./: .gitignore  .goreleaser.yml  CLAUDE.md  Makefile  README.md  config.toml.example  go.mod  go.sum  install.sh  package-lock.json  package.json  pyproject.toml  setup.sh
.github/workflows/: release.yml  test.yml
cmd/prx/: main.go
docs/: demo.tape
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.vue  api.ts  types.ts
frontend/src/components/: DetailDrawer.vue  OptionsMenu.vue  PRCard.vue  ScoreBar.vue
internal/ai/: assess.go  chat.go  stream.go  warm.go
internal/app/: app.go  deps.go
internal/autoupdate/: autoupdate.go  stdout_unix.go  stdout_windows.go
internal/cache/: cache.go  skip.go
internal/config/: config.go
internal/dirs/: dirs.go
internal/github/: fetch.go  github.go  types.go
internal/imgrender/: imgrender.go
internal/logger/: logger.go
internal/mcp/: server.go  tools.go  types.go
internal/reviewstate/: reviewstate.go  reviewstate_test.go
internal/skills/: skills.go  skills_test.go
internal/skills/builtins/: embed.go
internal/tui/: assessment.go  bulk_approve_scene.go  chatview.go  commands.go  conversation_keys.go  conversation_scene.go  diff_overlay_scene.go  diffparse.go  diffview.go  diffview_viewport.go  handlers.go  handlers_chat.go  hunk_annotations.go  keys.go  messages.go  model_helpers.go  prcard.go  scenes.go  slashcmds.go  startup.go  tui.go  types.go
src/reviews/: assessor.py  config.py  context.py  db.py  github.py  main.py  models.py  scoring.py  server.py
(+16 files in other folders)
