[project]
name = "reviews"
version = "0.1.0"
description = "PR risk triage - score PRs by blast radius, not diff size"
readme = "README.md"
authors = [
    { name = "Don Brown", email = "mrdon@twdata.org" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
reviews = "reviews.main:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
